--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,12 @@ requirements:
   build:
     - python
     - setuptools
-    - flask >=0.12.2
+    - flask 0.11.*
     - matplotlib
     - scipy
   run:
     - python
-    - flask
+    - flask >=0.11
     - numpy 
     - matplotlib
     - scipy
