MNT: Limit flask 0.10 to py<36

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,12 +19,13 @@ requirements:
   build:
     - python
     - setuptools
-    - flask 0.10.*
+    - flask 0.10.*  # [py<36]
+    - flask  # [py>=36]
     - matplotlib
     - scipy
   run:
     - python
-    - flask >=0.10
+    - flask
     - numpy 
     - matplotlib
     - scipy
