--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "ase" %}
-{% set version = "3.14.1" %}
-{% set sha256 = "e65862336cf2633b7dfe03e9bddd9bd24e0fb88fa767b059ab6b6aeb35e94af2" %}
+{% set version = "3.15.0" %}
+{% set sha256 = "5e22d961b1311ef4ba2d83527f7cc7448abac8cf9bddd1593bee548459263fe8" %}
 
 package:
   name: {{ name|lower }}
@@ -19,14 +19,14 @@ requirements:
   build:
     - python
     - setuptools
-    - flask
+    - flask 0.10.*  # [py<36]
+    - flask  # [py>=36]
     - matplotlib
     - scipy
-    - numpy
   run:
     - python
     - flask
-    - numpy
+    - numpy 
     - matplotlib
     - scipy
 
@@ -45,7 +45,7 @@ about:
   description: |
     ASE is a set of tools and Python modules for setting up, 
     manipulating, running, visualizing and analyzing atomistic simulations.
-    Python 2.6-3.5 
+    Python 2.6-3.6 
   doc_url: http://wiki.fysik.dtu.dk/ase
   dev_url: https://gitlab.com/ase/ase
 
