--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,8 @@ requirements:
     - itsdangerous 0.24 py27_1  # [py27]
     - itsdangerous 0.24 py35_1  # [py35]
     - itsdangerous 0.24 py36_1  # [py36]
+    - werkzeug 0.12.2 py35_0  # [py35]
+    - werkzeug 0.12.2 py27_0  # [py27]
     - matplotlib
     - scipy
   run:
