Workaround to problems with noarch dependencies (#14)
* Updated recipe/meta.yaml to version 3.15.0

* Add itsdangerous to build deps

* Add 3.6 to python versions

* MNT: Re-rendered with conda-smithy 2.4.2

* Add itsdengerous to run deps

* Drop itsdangerous from explicit deps

* Add explicit itsdangerous dependency for py<36

* MNT: drop unnecessary build deps

* MNT: add flask to build deps

* MNT: add matpliotlib to build deps

* MNT: add scipy to build deps

* MNT: try to soft-pin flask

* MNT: try to soft-pin flask at 0.11

* MNT: try to soft-pin flask at 0.10

* MNT: Limit flask 0.10 to py<36

* Try new flask feedstock

* Try to pin exact versions of itsdangerous

* Simple py selectors

* Pin werkzug build

* Pin only problematic packages in problematic versions

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,15 +12,18 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   script: python setup.py install
 
 requirements:
   build:
     - python
     - setuptools
-    - flask 0.10.*  # [py<36]
-    - flask  # [py>=36]
+    - flask
+    - itsdangerous 0.24 py27_1  # [py27]
+    - itsdangerous 0.24 py35_1  # [py35]
+    - werkzeug 0.12.2 py35_0  # [py35]
+    - werkzeug 0.12.2 py27_0  # [py27]
     - matplotlib
     - scipy
   run:
