--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,17 +38,17 @@ requirements:
   run:
     - python
     - flask
-#    - itsdangerous 0.24 py27_1  # [py27]
-#    - itsdangerous 0.24 py35_1  # [py35]
+    - itsdangerous 0.24 py27_1  # [py27]
+    - itsdangerous 0.24 py35_1  # [py35]
 #    - itsdangerous 0.24 py36_1  # [py36]
-#    - werkzeug 0.12.2 py27_0  # [py27]
-#    - werkzeug 0.12.2 py35_0  # [py35]
+    - werkzeug 0.12.2 py27_0  # [py27]
+    - werkzeug 0.12.2 py35_0  # [py35]
 #    - werkzeug 0.12.2 py36_0  # [py36]
 #    - matplotlib 2.1.1 py27_0  # [py27]
 #    - matplotlib 2.1.1 py35_0  # [py35]
 #    - matplotlib 2.1.1 py36_0  # [py36]
-    - itsdangerous
-    - werkzeug
+    - itsdangerous  # [py>35]
+    - werkzeug  # [py>35]
     - matplotlib
     - numpy 
     - scipy
