--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,12 @@ requirements:
     - setuptools
     - flask 0.10.*  # [py<36]
     - flask  # [py>=36]
+    - matplotlib
+    - scipy
+  run:
+    - python
+    - flask 0.10.*  # [py<36]
+    - flask  # [py>=36]
 #    - itsdangerous 0.24 py27_1  # [py27]
 #    - itsdangerous 0.24 py35_1  # [py35]
 #    - itsdangerous 0.24 py36_1  # [py36]
@@ -32,24 +38,8 @@ requirements:
 #    - matplotlib 2.1.1 py27_0  # [py27]
 #    - matplotlib 2.1.1 py35_0  # [py35]
 #    - matplotlib 2.1.1 py36_0  # [py36]
-#    - itsdangerous
-#    - werkzeug
-    - matplotlib
-    - scipy
-  run:
-    - python
-    - flask
-    - itsdangerous 0.24 py27_1  # [py27]
-    - itsdangerous 0.24 py35_1  # [py35]
-#    - itsdangerous 0.24 py36_1  # [py36]
-    - werkzeug 0.12.2 py27_0  # [py27]
-    - werkzeug 0.12.2 py35_0  # [py35]
-#    - werkzeug 0.12.2 py36_0  # [py36]
-#    - matplotlib 2.1.1 py27_0  # [py27]
-#    - matplotlib 2.1.1 py35_0  # [py35]
-#    - matplotlib 2.1.1 py36_0  # [py36]
-    - itsdangerous  # [py>35]
-    - werkzeug  # [py>35]
+#    - itsdangerous  # [py>35]
+#    - werkzeug  # [py>35]
     - matplotlib
     - numpy 
     - scipy
