--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,10 +10,9 @@ source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
-  #patches: 
-  #  - ngl_fix.patch
 
 build:
+  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -33,7 +32,7 @@ test:
     - ase
   commands:
     - export DISPLAY=""   # [not win]
-    - ase test
+    - ase test -v
 
 
 about:
