--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,8 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 0
-  #script: python setup.py install --single-version-externally-managed --record record.txt
+  number: 1
   script: python -m pip install --no-deps --ignore-installed . 
   entry_points:
     - ase=ase.cli.main:main
@@ -40,9 +39,8 @@ test:
   imports:
     - ase
   commands:
-    - export DISPLAY=""   # [not win]
+    - export DISPLAY="" 
     - ase test -v
-
 
 about:
   home: https://gitlab.com/ase/ase
