--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
+  skip: true  # [win]
   noarch: python
   number: 1
   script: python -m pip install --no-deps --ignore-installed . 
