--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ test:
     - ase
   commands:
     - export DISPLAY=""   # [not win]
-    - ase test -v
+    - ase test 
 
 about:
   home: https://gitlab.com/ase/ase
