--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
 
 build:
   noarch: python
-  number: 1
+  number: 2
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - ase=ase.cli.main:main
@@ -30,7 +30,6 @@ requirements:
     - pip
   run:
     - python >=3.5
-    - flask
     - matplotlib-base
     - numpy
     - scipy
@@ -39,11 +38,13 @@ test:
   requires:
     - pytest
     - pytest-mock
+    - pip
   imports:
     - ase
   commands:
     - export DISPLAY=""   # [not win]
     - ase test
+    - pip check
 
 
 about:
