--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "ase" %}
 {% set version = "3.24.0" %}
 {% set sha256 = "9acc93d6daaf48cd27b844c56f8bf49428b9db0542faa3cc30d9d5b8e1842195" %}
-{% set python_min = "3.10" %}
+# {% set python_min = "3.10" %}
 
 package:
   name: {{ name|lower }}
@@ -14,7 +14,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - ase=ase.cli.main:main
